# sopa_libros

./: .coveragerc  .gitignore  README.md  main.py  main_thematic.py  package-lock.json  pyproject.toml  requirements.txt  sonar-project.properties  wordsearch_batch.py
docs/: architecture.md  book_format_presets.md  clean_output.md  design_config.md  development.md  generation_report.md  kdp_preflight.md  manual_regression_checklist.md  production_review_summary.md  render_quality.md  reproducible_generation.md  visual_baseline.md
tests/: test_adaptive_layout.py  test_asset_generation_brief.py  test_asset_generation_normalizer.py  test_asset_generation_pipeline.py  test_asset_generation_providers.py  test_asset_manifest.py  test_asset_manifest_validation.py  test_asset_validation.py  test_assets_cli.py  test_book_assembly.py  test_config_imports.py  test_design_config.py  test_format_presets.py  test_front_matter.py  test_front_matter_rendering.py  test_generation_imports.py  test_generation_reporting.py  test_grid_batch.py  test_grid_generation.py  test_grid_generation_imports.py  test_kdp_preflight.py  test_page_plan.py  test_parser_validation_imports.py  test_path_config.py  test_pdf_rendering.py  test_puzzle_parser.py  test_render_quality.py  test_rendering_imports.py  test_rendering_smoke.py  test_review_summary.py  test_simple_cli.py  test_simple_pipeline.py  test_text_normalization.py  test_thematic_cli.py  test_thematic_pipeline.py  test_thematic_pipeline_asset_manifest.py  test_thematic_preview_pipeline.py  test_title_page_rendering.py  test_visual_regression.py  (+2 more)
(+82 files in other folders)
